# georeel

./: .coverage  .coveragerc  .gitignore  CHANGELOG.md  CLAUDE.md  INSTALL.md  PIPELINE_TODO.md  README.md  TODO.md  coverage.json  main.py  pyproject.toml  pyrightconfig.json
.zed/: debug.json
core/: blender_runtime.py  bounding_box.py  camera_keyframe.py  camera_path.py  dem_fetcher.py  elevation_grid.py  encoder_registry.py  exif_reader.py  frame_renderer.py  frustum.py  gpx_parser.py  gpx_stats.py  match_result.py  open_in_blender.py  photo_compositor.py  photo_matcher.py  photo_store.py  preview_map.py  project.py  scene_builder.py  sun_position.py  trackpoint.py  video_assembler.py
docs/: ARCHITECTURE.md  MAIN_SETTINGS.md  PIPELINE_SETTINGS.md
scripts/: install.ps1  install.sh
tests/: conftest.py  test_assemble_video_errors.py  test_assemble_video_ffmpeg.py  test_blender_runtime.py  test_bounding_box.py  test_camera_path.py  test_camera_path_build.py  test_composite_photos.py  test_dem_fetcher.py  test_elevation_grid.py  test_encoder_registry.py  test_exif_reader.py  test_frame_renderer.py  test_frame_renderer_extended.py  test_frustum.py  test_gpx_cleaner.py  test_gpx_parser.py  test_gpx_stats.py  test_match_result.py  test_nominatim_client.py  test_open_in_blender.py  test_photo_compositor.py  test_photo_compositor_tasks.py  test_photo_compositor_worker.py  test_photo_matcher.py  test_photo_metadata.py  test_photo_store.py  test_pipeline.py  test_pipeline_memory.py  test_preview_map.py  test_preview_video.py  test_project.py  test_satellite_providers.py  (+10 more)
(+90 files in other folders)
